added constructor of cards

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Game</title>
 </head>
 <body>
-
-
+<button class="btn get-cards">Раздать карты</button>
+<button class="btn btn-start">Начать игру</button>
+<div class="game-results"></div>
 <script src="main.js"></script>
 </body>
 </html>
